[tool.poetry]
name = "ozobot"
version = "0.1.0"
description = "Control your Ozobot Evo with python via Bluetooth"
authors = ["Silke pilon <silkepilon2009@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
thonny-ozobot = "^0.3"
bluepy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
